// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArtifactInfo Renders Artifact information for a Model 1`] = `
<section>
  <h1
    className="header"
  >
    Type: 
    Model
  </h1>
  <h2
    className="header2"
  >
    Properties
  </h2>
  <dl
    className="artifactInfo"
  >
    <div
      className="field"
      key="name"
    >
      <dt
        className="term"
      >
        name
      </dt>
      <dd
        className="value"
      >
        test model
      </dd>
    </div>
    <div
      className="field"
      key="description"
    >
      <dt
        className="term"
      >
        description
      </dt>
      <dd
        className="value"
      >
        A really great model
      </dd>
    </div>
    <div
      className="field"
      key="version"
    >
      <dt
        className="term"
      >
        version
      </dt>
      <dd
        className="value"
      >
        v1
      </dd>
    </div>
    <div
      className="field"
      key="create_time"
    >
      <dt
        className="term"
      >
        create_time
      </dt>
      <dd
        className="value"
      >
        2019-06-12T01:21:48.259263Z
      </dd>
    </div>
  </dl>
  <h2
    className="header2"
  >
    Custom Properties
  </h2>
  <dl
    className="artifactInfo"
  >
    <div
      className="field"
      key="__kf_workspace__"
    >
      <dt
        className="term"
      >
        __kf_workspace__
      </dt>
      <dd
        className="value"
      >
        workspace-1
      </dd>
    </div>
    <div
      className="field"
      key="__kf_run__"
    >
      <dt
        className="term"
      >
        __kf_run__
      </dt>
      <dd
        className="value"
      >
        1
      </dd>
    </div>
  </dl>
</section>
`;

exports[`ArtifactInfo Renders generic Artifact information 1`] = `
<section>
  <h1
    className="header"
  >
    Type: 
    Data Set
  </h1>
  <h2
    className="header2"
  >
    Properties
  </h2>
  <dl
    className="artifactInfo"
  >
    <div
      className="field"
      key="name"
    >
      <dt
        className="term"
      >
        name
      </dt>
      <dd
        className="value"
      >
        test dataset
      </dd>
    </div>
    <div
      className="field"
      key="version"
    >
      <dt
        className="term"
      >
        version
      </dt>
      <dd
        className="value"
      >
        v0.0.1
      </dd>
    </div>
    <div
      className="field"
      key="create_time"
    >
      <dt
        className="term"
      >
        create_time
      </dt>
      <dd
        className="value"
      >
        2019-06-12T01:21:48.259263Z
      </dd>
    </div>
  </dl>
  <h2
    className="header2"
  >
    Custom Properties
  </h2>
  <dl
    className="artifactInfo"
  >
    <div
      className="field"
      key="__kf_workspace__"
    >
      <dt
        className="term"
      >
        __kf_workspace__
      </dt>
      <dd
        className="value"
      >
        workspace-1
      </dd>
    </div>
  </dl>
</section>
`;
